--- a/dex_retargeting/configs/offline/allegro_hand_right.yml
+++ b/dex_retargeting/configs/offline/allegro_hand_right.yml
@@ -1,11 +1,13 @@
 retargeting:
   type: position
   urdf_path: allegro_hand/allegro_hand_right.urdf
+  wrist_link_name: "wrist"
 
   target_joint_names: null
-  target_link_names: [ "palm", "link_15.0_tip", "link_3.0_tip", "link_7.0_tip", "link_11.0_tip" ]
+  target_link_names: [ "link_15.0_tip", "link_3.0_tip", "link_7.0_tip", "link_11.0_tip", "link_14.0",
+                       "link_2.0", "link_6.0", "link_10.0" ]
 
-  target_link_human_indices: [ 0, 4, 8, 12, 16 ]
+  target_link_human_indices: [ 4, 8, 12, 16, 2, 6, 10, 14 ]
 
   # A smaller alpha means stronger filtering, i.e. more smooth but also larger latency
   # 1 means no filter while 0 means not moving
