--- a/dex_retargeting/configs/offline/shadow_hand_right.yml
+++ b/dex_retargeting/configs/offline/shadow_hand_right.yml
@@ -1,12 +1,13 @@
 retargeting:
   type: position
   urdf_path: shadow_hand/shadow_hand_right.urdf
+  wrist_link_name: "ee_link"
 
   target_joint_names: null
-  target_link_names: [ "palm", "thtip", "fftip", "mftip", "rftip", "lftip",
+  target_link_names: [ "thtip", "fftip", "mftip", "rftip", "lftip",
                        "thmiddle", "ffmiddle", "mfmiddle", "rfmiddle", "lfmiddle" ]
 
-  target_link_human_indices: [ 0, 4, 8, 12, 16, 20, 2, 6, 10, 14, 18 ]
+  target_link_human_indices: [ 4, 8, 12, 16, 20, 2, 6, 10, 14, 18 ]
 
   # A smaller alpha means stronger filtering, i.e. more smooth but also larger latency
   # 1 means no filter while 0 means not moving
