--- a/dex_retargeting/configs/teleop/allegro_hand_right.yml
+++ b/dex_retargeting/configs/teleop/allegro_hand_right.yml
@@ -1,6 +1,7 @@
 retargeting:
   type: vector
   urdf_path: allegro_hand/allegro_hand_right.urdf
+  wrist_link_name: "wrist"
 
   # Target refers to the retargeting target, which is the robot hand
   target_joint_names: null
