--- a/dex_retargeting/configs/teleop/shadow_hand_right.yml
+++ b/dex_retargeting/configs/teleop/shadow_hand_right.yml
@@ -1,6 +1,7 @@
 retargeting:
   type: vector
   urdf_path: shadow_hand/shadow_hand_right.urdf
+  wrist_link_name: "ee_link"
 
   # Target refers to the retargeting target, which is the robot hand
   target_joint_names: null
