[major update] update kinematics adaptor for mimic joints

--- a/dex_retargeting/configs/teleop/schunk_svh_hand_right.yml
+++ b/dex_retargeting/configs/teleop/schunk_svh_hand_right.yml
@@ -4,10 +4,13 @@ retargeting:
   wrist_link_name: "right_hand_base_link"
 
   # Target refers to the retargeting target, which is the robot hand
-  target_joint_names: null
+  target_joint_names: [ 'right_hand_Thumb_Opposition', 'right_hand_Thumb_Flexion', 'right_hand_Index_Finger_Proximal',
+                        'right_hand_Index_Finger_Distal', 'right_hand_Finger_Spread', 'right_hand_Pinky',
+                        'right_hand_Ring_Finger', 'right_hand_Middle_Finger_Proximal', 'right_hand_Middle_Finger_Distal' ]
   target_origin_link_names: [ "right_hand_base_link","right_hand_base_link", "right_hand_base_link", "right_hand_base_link", "right_hand_base_link", ]
   target_task_link_names: [ "right_hand_c", "right_hand_t", "right_hand_s", "right_hand_r", "right_hand_q" ]
   scaling_factor: 1.2
+
 
   # Source refers to the retargeting input, which usually corresponds to the human hand
   # The joint indices of human hand joint which corresponds to each link in the target_link_names
