--- a/dex_retargeting/configs/offline/ability_hand_right.yml
+++ b/dex_retargeting/configs/offline/ability_hand_right.yml
@@ -3,7 +3,7 @@ retargeting:
   urdf_path: ability_hand/ability_hand_right.urdf
   wrist_link_name: "base_link"
 
-  target_joint_names: null
+  target_joint_names: [ 'thumb_q1', 'thumb_q2', 'index_q1', 'middle_q1', 'pinky_q1', 'ring_q1' ]
   target_link_names: [ "thumb_tip",  "index_tip", "middle_tip", "ring_tip", "pinky_tip" ]
 
   target_link_human_indices: [ 4, 8, 12, 16, 20 ]
