--- a/dex_retargeting/configs/offline/schunk_svh_hand_right.yml
+++ b/dex_retargeting/configs/offline/schunk_svh_hand_right.yml
@@ -3,7 +3,9 @@ retargeting:
   urdf_path: schunk_hand/schunk_svh_hand_right.urdf
   wrist_link_name: "right_hand_base_link"
 
-  target_joint_names: null
+  target_joint_names: [ 'right_hand_Thumb_Opposition', 'right_hand_Thumb_Flexion', 'right_hand_Index_Finger_Proximal',
+                        'right_hand_Index_Finger_Distal', 'right_hand_Finger_Spread', 'right_hand_Pinky',
+                        'right_hand_Ring_Finger', 'right_hand_Middle_Finger_Proximal', 'right_hand_Middle_Finger_Distal' ]
   target_link_names: [ "right_hand_c", "right_hand_t", "right_hand_s", "right_hand_r",
                         "right_hand_q", "right_hand_b", "right_hand_p", "right_hand_o", "right_hand_n", "right_hand_i"]
 
