--- a/dex_retargeting/configs/teleop/schunk_svh_hand_right_dexpilot.yml
+++ b/dex_retargeting/configs/teleop/schunk_svh_hand_right_dexpilot.yml
@@ -4,7 +4,9 @@ retargeting:
   wrist_link_name: "right_hand_base_link"
 
   # Target refers to the retargeting target, which is the robot hand
-  target_joint_names: null
+  target_joint_names: [ 'right_hand_Thumb_Opposition', 'right_hand_Thumb_Flexion', 'right_hand_Index_Finger_Proximal',
+                        'right_hand_Index_Finger_Distal', 'right_hand_Finger_Spread', 'right_hand_Pinky',
+                        'right_hand_Ring_Finger', 'right_hand_Middle_Finger_Proximal', 'right_hand_Middle_Finger_Distal' ]
   finger_tip_link_names: [ "right_hand_c", "right_hand_t", "right_hand_s", "right_hand_r", "right_hand_q" ]
   scaling_factor: 1.2
 
