--- a/dex_retargeting/configs/teleop/schunk_svh_hand_right_dexpilot.yml
+++ b/dex_retargeting/configs/teleop/schunk_svh_hand_right_dexpilot.yml
@@ -7,7 +7,7 @@ retargeting:
   target_joint_names: [ 'right_hand_Thumb_Opposition', 'right_hand_Thumb_Flexion', 'right_hand_Index_Finger_Proximal',
                         'right_hand_Index_Finger_Distal', 'right_hand_Finger_Spread', 'right_hand_Pinky',
                         'right_hand_Ring_Finger', 'right_hand_Middle_Finger_Proximal', 'right_hand_Middle_Finger_Distal' ]
-  finger_tip_link_names: [ "right_hand_c", "right_hand_t", "right_hand_s", "right_hand_r", "right_hand_q" ]
+  finger_tip_link_names: [ "thtip", "fftip", "mftip", "rftip", "lftip" ]
   scaling_factor: 1.2
 
   # Source refers to the retargeting input, which usually corresponds to the human hand
