--- a/dex_retargeting/configs/teleop/schunk_svh_hand_left_dexpilot.yml
+++ b/dex_retargeting/configs/teleop/schunk_svh_hand_left_dexpilot.yml
@@ -1,13 +1,13 @@
 retargeting:
   type: DexPilot
   urdf_path: schunk_hand/schunk_svh_hand_left.urdf
-  wrist_link_name: "right_hand_base_link"
+  wrist_link_name: "left_hand_base_link"
 
   # Target refers to the retargeting target, which is the robot hand
-  target_joint_names: [ 'right_hand_Thumb_Opposition', 'right_hand_Thumb_Flexion', 'right_hand_Index_Finger_Proximal',
-                        'right_hand_Index_Finger_Distal', 'right_hand_Finger_Spread', 'right_hand_Pinky',
-                        'right_hand_Ring_Finger', 'right_hand_Middle_Finger_Proximal', 'right_hand_Middle_Finger_Distal' ]
-  finger_tip_link_names: [ "right_hand_c", "right_hand_t", "right_hand_s", "right_hand_r", "right_hand_q" ]
+  target_joint_names: [ 'left_hand_Thumb_Opposition', 'left_hand_Thumb_Flexion', 'left_hand_Index_Finger_Proximal',
+                        'left_hand_Index_Finger_Distal', 'left_hand_Finger_Spread', 'left_hand_Pinky',
+                        'left_hand_Ring_Finger', 'left_hand_Middle_Finger_Proximal', 'left_hand_Middle_Finger_Distal' ]
+  finger_tip_link_names: [ "thtip", "fftip", "mftip", "rftip", "lftip" ]
   scaling_factor: 1.2
 
   # Source refers to the retargeting input, which usually corresponds to the human hand
