[update] update readme and action

--- a/.github/workflows/build_stable.yml
+++ b/.github/workflows/build_stable.yml
@@ -39,3 +39,16 @@ jobs:
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Automatic tagged release
+          draft: false
+          prerelease: false
