--- a/.github/workflows/build_nightly.yml
+++ b/.github/workflows/build_nightly.yml
@@ -39,7 +39,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: nightly
-          name: 'dvp_teleop Nightly Release'
+          name: 'dex_retargeting Nightly Release'
           prerelease: true
           body: 'Nightly release.'
           files: |
