[update] update realtime retargeting readme

--- a/example/vector_retargeting/.gitignore
+++ b/example/vector_retargeting/.gitignore
@@ -1,4 +1,4 @@
 # Examples
 /example/vector_retargeting/data/
 !example/vector_retargeting/data/human_hand_video.mp4
-!example/vector_retargeting/data/realtime_example.mp4
+!example/vector_retargeting/data/realtime_example.webp
