--- a/dex_retargeting/configs/offline/inspire_hand_right.yml
+++ b/dex_retargeting/configs/offline/inspire_hand_right.yml
@@ -1,13 +1,13 @@
 retargeting:
   type: position
   urdf_path: inspire_hand/inspire_hand_right.urdf
-  wrist_link_name: "base"
 
   target_joint_names: [ 'pinky_proximal_joint', 'ring_proximal_joint', 'middle_proximal_joint', 'index_proximal_joint',
                         'thumb_proximal_pitch_joint', 'thumb_proximal_yaw_joint' ]
   target_link_names: [ "thumb_tip",  "index_tip", "middle_tip", "ring_tip", "pinky_tip" ]
 
   target_link_human_indices: [ 4, 8, 12, 16, 20 ]
+  add_dummy_free_joint: True
 
   # A smaller alpha means stronger filtering, i.e. more smooth but also larger latency
   # 1 means no filter while 0 means not moving
